--- a/index.html
+++ b/index.html
@@ -11,26 +11,53 @@
       <div id="logo">Menu Panic!</div>
     </header>
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4">
-        <div class="panel panel-default" style="min-height: 300px">
-          <div class="panel-heading" id="search-title"><h3>Search a Restaurant</h3></div>
-          <div class="panel-body"
-            <form id="search-form">
-              <fieldset class="form-group">
-                <label for="nameSearch">Restaurant Name</label>
-                <input type="text" class="form-control" id="search" placeholder="Wilma's Patio, Chipotle, etc.">
-                <small class="text-muted">Find your restaurant!</small>
-              </fieldset>
-              <fieldset class="form-group">
-                <label for="zipCodeSearch">Zip Code</label>
-                <input type="name" class="form-control" id="postal" placeholder="92662">
-                <small class="text-muted">Enter the Zip Code of your Restaurant</small>
-              </fieldset>
-              <button type="submit" class="btn btn-primary" id="search-button">Stop Panicking!</button>
-            </form>
-          </div>
+      <div class="col-md-1"></div>
+      <div class="panel panel-default col-sm-1" id="search-icon">
+        <h3 id="click"><img src="images/Search_Icon.png"></h3>
       </div>
+    </div>
+    <div class="view">
+      <div class="view-search">
+        <div class="row"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="panel panel-default" style="min-height: 300px">
+              <div class="panel-heading" id="search-title"><h3>Search a Restaurant</h3></div>
+              <div class="panel-body"
+                <form id="search-form">
+                  <fieldset class="form-group">
+                    <label for="nameSearch">Restaurant Name</label>
+                    <input type="text" class="form-control" id="search" placeholder="Wilma's Patio, Chipotle, etc.">
+                    <small class="text-muted">Find your restaurant!</small>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="zipCodeSearch">Zip Code</label>
+                    <input type="name" class="form-control" id="postal" placeholder="92662">
+                    <small class="text-muted">Enter the Zip Code of your Restaurant</small>
+                  </fieldset>
+                  <button type="submit" class="btn btn-primary" id="search-button">Stop Panicking!</button>
+                </form>
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="hide-results">
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="panel panel-default" style="min-height: 150px" id="results-box">
+              <div class="panel-heading"><h3>Is this what you were looking for?</h3></div>
+              <div class="panel-body" id="restaurant-info"></div>
+              <div class="col-md-2"></div>
+              <div class='panel-body'><button type="submit" class="btn btn-primary pull-right" id="menu-button">View Menu</button></div>
+            </div>
+        </div>
+      </div>
+
+
+    </div>
+    <div class="hide-menu">
+
     </div>
     <script src="default.js"></script>
   </body>
