--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="panel panel-default col-sm-1" id="search-icon">
-        <h3 id="click"><img src="images/Search_Icon.png"></h3>
+        <h4 id="click">Search Again</h4>
       </div>
     </div>
     <div class="view">
+      <div class="col-md-4"></div>
       <div class="view-search">
         <div class="row"></div>
           <div class="col-md-4"></div>
@@ -53,11 +54,8 @@
             </div>
         </div>
       </div>
-
-
     </div>
     <div class="hide-menu">
-
     </div>
     <script src="default.js"></script>
   </body>
