Current version for standup

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
     <div class="row">
       <div class="col-md-1"></div>
-      <div class="panel panel-default col-sm-1" id="search-icon">
+    <!--  <div class="panel panel-default col-sm-1" id="search-icon">
         <h4 id="click">Search Again</h4>
-      </div>
+      </div> -->
     </div>
     <div class="view">
       <div class="col-md-2"></div>
@@ -42,6 +42,10 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="view-vote">
+
+    </div>
       <div class="hide-results">
         <div class="row">
           <div class="col-md-4"></div>
