--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
         <h4 id="click">Search Again</h4>
       </div> -->
     </div>
-    <div class="view">
+    <div class="login">
+      <div class="col-md-4"></div>
+      <div class="panel panel-default col-md-3">
+        <form class="panel-body">
+           <fieldset class="form-group">
+             <label for="name">Username</label>
+             <input type="name" class="form-control" id="username" placeholder="Enter username">
+           </fieldset>
+           <fieldset class="form-group">
+             <label for="password">Password</label>
+             <input type="password" class="form-control" id="password" placeholder="Password">
+           </fieldset>
+           <button type="button" class="btn btn-primary" id="login">Login</button>
+        </form>
+      </div>
+    </div>
+    <div class="hide">
       <div class="col-md-2"></div>
       <div class="view-search">
         <div class="row"></div>
