Current version for sta stand-up

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header id="header">
-      <div id="logo">Menu Panic!</div>
+      <div id="logo"><img src="images/logo-2.png"</img></div>
     </header>
     <div class="row">
       <div class="col-md-1"></div>
